--- a/mk2/WebContent/css/syumibbom.css
+++ b/mk2/WebContent/css/syumibbom.css
@@ -1,4 +1,43 @@
 @charset "EUC-KR";
+
+/* 메인 */
+
+.jumbotron {
+  background-size: cover;
+  color: black;
+}
+
+.carousel {
+  height: 400px;
+  margin-bottom: 60px;
+}
+.carousel .item {
+  height: 400px;
+  background-color: #777;
+}
+.carousel-inner > .item > img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  min-width: 100%;
+  height: 400px;
+}
+
+.marketing .col-lg-4 {
+  margin-bottom: 20px;
+  text-align: center;
+}
+.marketing h2 {
+  font-weight: normal;
+}
+.marketing .col-lg-4 p {
+  margin-right: 10px;
+  margin-left: 10px;
+}
+
+
+/* 로그인 */
+
 .form-signin {
 	max-width: 330px;
 	padding: 15px;
@@ -32,4 +71,21 @@
 	margin-bottom: 10px;
 	border-top-right-radius: 0;
 	border-top-left-radius: 0;
+}
+
+
+/* 게시판 */
+
+.list {
+	width: 350;
+	text-overflow: ellipsis;
+	overflow: hidden;
+	white-space: nowrap;
+}
+
+
+/* footer */
+
+.footer {
+	margin-top: 50px;
 }
