게시판 페이징 구현

--- a/mk2/WebContent/css/syumibbom.css
+++ b/mk2/WebContent/css/syumibbom.css
@@ -82,6 +82,20 @@
 	overflow: hidden;
 	white-space: nowrap;
 }
+.list a{
+	color: #000000;
+}
+.paging{
+	text-align: center;
+}
+.paging strong{
+	padding-left: 4px;
+	margin-right: 10px;
+}
+.paging a{
+	padding-left: 4px;
+	margin-right: 10px;
+}
 
 
 /* footer */
